# llm-gateway-rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
admin-ui/: components.json  package.json  pnpm-lock.yaml
admin-ui/app/: client-layout.tsx  layout.tsx  page.tsx
admin-ui/app/keys/: page.tsx
admin-ui/app/logs/: page.tsx
admin-ui/app/models/: page.tsx
admin-ui/app/providers/: page.tsx
admin-ui/components/: data-table.tsx  json-view.tsx  page-header.tsx  sidebar.tsx  theme-toggle.tsx
admin-ui/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  select.tsx
admin-ui/lib/: admin-key-context.tsx  api.ts  types.ts
migrations/: 001_init.sql  002_request_logs.sql  003_token_budget.sql  004_token_coefficients.sql
src/: config.rs  error.rs  main.rs  state.rs
src/middleware/: auth.rs
src/models/: mod.rs  model.rs  provider.rs  request_log.rs  user_key.rs
src/routes/: admin.rs  mod.rs  proxy.rs
src/services/: key_service.rs  log_service.rs  mod.rs  model_service.rs  provider_service.rs
